--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Alatsi&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
-
+  <main>
+    <img src="images/lamp.jpeg" alt="lamp" class="lamp-banner"/>
+  </main>
+  <footer></footer>
 </body>
 </html>
