ADD: white overlay on left side over lamp image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   <main>
     <img src="images/lamp.jpeg" alt="lamp" class="lamp-banner"/>
+    <div class="left-overlay">
+
+    </div>
   </main>
   <footer></footer>
 </body>
