--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="left-overlay">
 
     </div>
+    <div class="right-overlay">
+
+    </div>
   </main>
   <footer></footer>
 </body>
