ADD: chair image overlay next to black right overlay

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <main>
     <img src="images/lamp.jpeg" alt="lamp" class="lamp-banner"/>
     <div class="left-overlay">
-
     </div>
+    <img src="images/chair.jpeg" alt="chair" class="chair-img"/>
     <div class="right-overlay">
 
     </div>
