ADD: top line on left side overlay

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   <main>
     <img src="images/lamp.jpeg" alt="lamp" class="lamp-banner"/>
     <div class="left-overlay">
+      <div class="top-line">
+        <div class="icon">
+          <span id="left-bar"></span>
+          <span id="right-bar"></span>
+        </div>
+        <p>Featured in the store</p>
+      </div>
     </div>
     <img src="images/chair.jpeg" alt="chair" class="chair-img"/>
     <div class="right-overlay">
