EDIT: added custom icon to top line & flexed layout

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="left-overlay">
       <div class="top-line">
         <div class="icon">
-          <span id="left-bar"></span>
-          <span id="right-bar"></span>
+          <div id="left-bar"></div>
+          <div id="right-bar"></div>
         </div>
         <p>Featured in the store</p>
       </div>
