--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         </div>
         <p>Featured in the store</p>
       </div>
+      <div class="center-text">
+        <div class="text-lines">
+          <p id="number">01</p>
+        <p id="description">A beautiful minimalist floor lamp</p>
+        <p id="shop-now">SHOP NOW</p>
+        </div>
+      </div>
     </div>
     <img src="images/chair.jpeg" alt="chair" class="chair-img"/>
     <div class="right-overlay">
