EDIT: centered and flex layout to center text div

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       </div>
       <div class="center-text">
         <div class="text-lines">
-          <p id="number">01</p>
+          <div class="text-lines-top">
+            <p id="number">01</p>
         <p id="description">A beautiful minimalist floor lamp</p>
+          </div>
         <p id="shop-now">SHOP NOW</p>
         </div>
       </div>
