EDIT: refactored to set bottom box absolute to right overlay inner div

--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
     </div>
     <img src="images/chair.jpeg" alt="chair" class="chair-img"/>
     <div class="right-overlay">
-
+      <div class="right-overlay-inner">
+        <div class="bottom-box">
+          <p id="right-overlay-top-line">Minimalist white chair</p>
+        <div class="right-overlay-text-bottom">
+          <p>02</p>
+          <p id="right-overlay-bottom-arrow">></p>
+        </div>
+        </div>
+      </div>
     </div>
   </main>
   <footer></footer>
