ADD: center text for right overlay

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <img src="images/chair.jpeg" alt="chair" class="chair-img"/>
     <div class="right-overlay">
       <div class="right-overlay-inner">
+        <p id="right-middle-text">WHITE</p>
         <div class="bottom-box">
           <p id="right-overlay-top-line">Minimalist white chair</p>
         <div class="right-overlay-text-bottom">
