EDIT: footer links

--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
       </div>
     </div>
   </main>
-  <footer></footer>
+  <footer>
+    <ul>
+      <li>COLLECTIONS</li>
+      <li class="footer-item"><ul>
+        <li>FACEBOOK</li>
+        <li>TWITTER</li>
+        <li>INSTAGRAM</li>
+      </ul></li>
+      <li>SEND YOUR INQUIRY</li>
+    </ul>
+  </footer>
 </body>
 </html>
