EDIT: collections link bar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </main>
   <footer>
     <ul>
-      <li>COLLECTIONS</li>
+      <li id="collections"><p>COLLECTIONS</p><div class="bar"></div></li>
       <li class="footer-item"><ul>
         <li>FACEBOOK</li>
         <li>TWITTER</li>
