--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Alatsi&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>Interior Design Concept</title>
 </head>
 <body>
   <main>
